test/compilable/imports/imp12399stream.d
module imports.imp12399stream;

class Stream {}
class File {}
