test/fail_compilation/imports/test1441b.d
module imports.test1441b;

class Foo
{
    private static class Bar
    {
    }
}
